Changes & bug fixes
- only allows UM standardized file format (16x16 jpg/png + filename)
- added option to standardize files added via FTP, Windows file explorer, etc. (renames file, ensures proper file type, resizes image)
- ensures GD library is available
- fixed file sorting
fixed hexadecimal_filename() object/function argument
- added left margin for admin buttons (they were cramped together)
- language changes added with tis PR

--- a/src/Themes/default/css/ultimate-menu.css
+++ b/src/Themes/default/css/ultimate-menu.css
@@ -14,3 +14,6 @@
 @keyframes umloader {
 	100% {background-position:top right,bottom right}
 }
+input.um_button {
+	margin-left: 0.25rem !important;
+}	
